hw4/hw04/parser.automaton
State 0:
## Known stack suffix:
##
## LR(1) items:
exp_top' -> . exp_top [ # ]
## Transitions:
-- On TSTRING shift to state 1
-- On TINT shift to state 3
-- On TILDE shift to state 4
-- On LPAREN shift to state 5
-- On INT shift to state 6
-- On IDENT shift to state 7
-- On DASH shift to state 8
-- On BANG shift to state 9
-- On ty shift to state 10
-- On exp_top shift to state 37
-- On exp shift to state 38
## Reductions:

State 1:
## Known stack suffix:
## TSTRING
## LR(1) items:
exp -> TSTRING . NULL [ STAR SEMI RPAREN RBRACKET PLUS LPAREN LBRACKET EQEQ EOF DASH COMMA ]
ty -> TSTRING . [ LBRACKET ]
## Transitions:
-- On NULL shift to state 2
## Reductions:
-- On LBRACKET
--   reduce production ty -> TSTRING

State 2:
## Known stack suffix:
## TSTRING NULL
## LR(1) items:
exp -> TSTRING NULL . [ STAR SEMI RPAREN RBRACKET PLUS LPAREN LBRACKET EQEQ EOF DASH COMMA ]
## Transitions:
## Reductions:
-- On STAR SEMI RPAREN RBRACKET PLUS LPAREN LBRACKET EQEQ EOF DASH COMMA
--   reduce production exp -> TSTRING NULL

State 3:
## Known stack suffix:
## TINT
## LR(1) items:
ty -> TINT . [ LBRACKET IDENT ]
## Transitions:
## Reductions:
-- On LBRACKET IDENT
--   reduce production ty -> TINT

State 4:
## Known stack suffix:
## TILDE
## LR(1) items:
exp -> TILDE . exp [ STAR SEMI RPAREN RBRACKET PLUS LPAREN LBRACKET EQEQ EOF DASH COMMA ]
## Transitions:
-- On TSTRING shift to state 1
-- On TINT shift to state 3
-- On TILDE shift to state 4
-- On LPAREN shift to state 5
-- On INT shift to state 6
-- On IDENT shift to state 7
-- On DASH shift to state 8
-- On BANG shift to state 9
-- On ty shift to state 10
-- On exp shift to state 36
## Reductions:

State 5:
## Known stack suffix:
## LPAREN
## LR(1) items:
exp -> LPAREN . exp RPAREN [ STAR SEMI RPAREN RBRACKET PLUS LPAREN LBRACKET EQEQ EOF DASH COMMA ]
## Transitions:
-- On TSTRING shift to state 1
-- On TINT shift to state 3
-- On TILDE shift to state 4
-- On LPAREN shift to state 5
-- On INT shift to state 6
-- On IDENT shift to state 7
-- On DASH shift to state 8
-- On BANG shift to state 9
-- On ty shift to state 10
-- On exp shift to state 34
## Reductions:

State 6:
## Known stack suffix:
## INT
## LR(1) items:
exp -> INT . [ STAR SEMI RPAREN RBRACKET PLUS LPAREN LBRACKET EQEQ EOF DASH COMMA ]
## Transitions:
## Reductions:
-- On STAR SEMI RPAREN RBRACKET PLUS LPAREN LBRACKET EQEQ EOF DASH COMMA
--   reduce production exp -> INT

State 7:
## Known stack suffix:
## IDENT
## LR(1) items:
exp -> IDENT . [ STAR SEMI RPAREN RBRACKET PLUS LPAREN LBRACKET EQEQ EOF DASH COMMA ]
## Transitions:
## Reductions:
-- On STAR SEMI RPAREN RBRACKET PLUS LPAREN LBRACKET EQEQ EOF DASH COMMA
--   reduce production exp -> IDENT

State 8:
## Known stack suffix:
## DASH
## LR(1) items:
exp -> DASH . exp [ STAR SEMI RPAREN RBRACKET PLUS LPAREN LBRACKET EQEQ EOF DASH COMMA ]
## Transitions:
-- On TSTRING shift to state 1
-- On TINT shift to state 3
-- On TILDE shift to state 4
-- On LPAREN shift to state 5
-- On INT shift to state 6
-- On IDENT shift to state 7
-- On DASH shift to state 8
-- On BANG shift to state 9
-- On ty shift to state 10
-- On exp shift to state 33
## Reductions:

State 9:
## Known stack suffix:
## BANG
## LR(1) items:
exp -> BANG . exp [ STAR SEMI RPAREN RBRACKET PLUS LPAREN LBRACKET EQEQ EOF DASH COMMA ]
## Transitions:
-- On TSTRING shift to state 1
-- On TINT shift to state 3
-- On TILDE shift to state 4
-- On LPAREN shift to state 5
-- On INT shift to state 6
-- On IDENT shift to state 7
-- On DASH shift to state 8
-- On BANG shift to state 9
-- On ty shift to state 10
-- On exp shift to state 14
## Reductions:

State 10:
## Known stack suffix:
## ty
## LR(1) items:
exp -> ty . LBRACKET RBRACKET NULL [ STAR SEMI RPAREN RBRACKET PLUS LPAREN LBRACKET EQEQ EOF DASH COMMA ]
ty -> ty . LBRACKET RBRACKET [ LBRACKET ]
## Transitions:
-- On LBRACKET shift to state 11
## Reductions:

State 11:
## Known stack suffix:
## ty LBRACKET
## LR(1) items:
exp -> ty LBRACKET . RBRACKET NULL [ STAR SEMI RPAREN RBRACKET PLUS LPAREN LBRACKET EQEQ EOF DASH COMMA ]
ty -> ty LBRACKET . RBRACKET [ LBRACKET ]
## Transitions:
-- On RBRACKET shift to state 12
## Reductions:

State 12:
## Known stack suffix:
## ty LBRACKET RBRACKET
## LR(1) items:
exp -> ty LBRACKET RBRACKET . NULL [ STAR SEMI RPAREN RBRACKET PLUS LPAREN LBRACKET EQEQ EOF DASH COMMA ]
ty -> ty LBRACKET RBRACKET . [ LBRACKET ]
## Transitions:
-- On NULL shift to state 13
## Reductions:
-- On LBRACKET
--   reduce production ty -> ty LBRACKET RBRACKET

State 13:
## Known stack suffix:
## ty LBRACKET RBRACKET NULL
## LR(1) items:
exp -> ty LBRACKET RBRACKET NULL . [ STAR SEMI RPAREN RBRACKET PLUS LPAREN LBRACKET EQEQ EOF DASH COMMA ]
## Transitions:
## Reductions:
-- On STAR SEMI RPAREN RBRACKET PLUS LPAREN LBRACKET EQEQ EOF DASH COMMA
--   reduce production exp -> ty LBRACKET RBRACKET NULL

State 14:
## Known stack suffix:
## BANG exp
## LR(1) items:
exp -> exp . PLUS exp [ STAR SEMI RPAREN RBRACKET PLUS LPAREN LBRACKET EQEQ EOF DASH COMMA ]
exp -> exp . DASH exp [ STAR SEMI RPAREN RBRACKET PLUS LPAREN LBRACKET EQEQ EOF DASH COMMA ]
exp -> exp . STAR exp [ STAR SEMI RPAREN RBRACKET PLUS LPAREN LBRACKET EQEQ EOF DASH COMMA ]
exp -> exp . EQEQ exp [ STAR SEMI RPAREN RBRACKET PLUS LPAREN LBRACKET EQEQ EOF DASH COMMA ]
exp -> BANG exp . [ STAR SEMI RPAREN RBRACKET PLUS LPAREN LBRACKET EQEQ EOF DASH COMMA ]
exp -> exp . LBRACKET exp RBRACKET [ STAR SEMI RPAREN RBRACKET PLUS LPAREN LBRACKET EQEQ EOF DASH COMMA ]
exp -> exp . LPAREN loption(separated_nonempty_list(COMMA,exp)) RPAREN [ STAR SEMI RPAREN RBRACKET PLUS LPAREN LBRACKET EQEQ EOF DASH COMMA ]
## Transitions:
-- On LPAREN shift to state 15
-- On LBRACKET shift to state 22
-- On EQEQ shift to state 27
## Reductions:
-- On STAR SEMI RPAREN RBRACKET PLUS EQEQ EOF DASH COMMA
--   reduce production exp -> BANG exp
** Conflict on EQEQ

State 15:
## Known stack suffix:
## exp LPAREN
## LR(1) items:
exp -> exp LPAREN . loption(separated_nonempty_list(COMMA,exp)) RPAREN [ STAR SEMI RPAREN RBRACKET PLUS LPAREN LBRACKET EQEQ EOF DASH COMMA ]
## Transitions:
-- On TSTRING shift to state 1
-- On TINT shift to state 3
-- On TILDE shift to state 4
-- On LPAREN shift to state 5
-- On INT shift to state 6
-- On IDENT shift to state 7
-- On DASH shift to state 8
-- On BANG shift to state 9
-- On ty shift to state 10
-- On separated_nonempty_list(COMMA,exp) shift to state 16
-- On loption(separated_nonempty_list(COMMA,exp)) shift to state 17
-- On exp shift to state 19
## Reductions:
-- On RPAREN
--   reduce production loption(separated_nonempty_list(COMMA,exp)) ->

State 16:
## Known stack suffix:
## separated_nonempty_list(COMMA,exp)
## LR(1) items:
loption(separated_nonempty_list(COMMA,exp)) -> separated_nonempty_list(COMMA,exp) . [ RPAREN ]
## Transitions:
## Reductions:
-- On RPAREN
--   reduce production loption(separated_nonempty_list(COMMA,exp)) -> separated_nonempty_list(COMMA,exp)

State 17:
## Known stack suffix:
## exp LPAREN loption(separated_nonempty_list(COMMA,exp))
## LR(1) items:
exp -> exp LPAREN loption(separated_nonempty_list(COMMA,exp)) . RPAREN [ STAR SEMI RPAREN RBRACKET PLUS LPAREN LBRACKET EQEQ EOF DASH COMMA ]
## Transitions:
-- On RPAREN shift to state 18
## Reductions:

State 18:
## Known stack suffix:
## exp LPAREN loption(separated_nonempty_list(COMMA,exp)) RPAREN
## LR(1) items:
exp -> exp LPAREN loption(separated_nonempty_list(COMMA,exp)) RPAREN . [ STAR SEMI RPAREN RBRACKET PLUS LPAREN LBRACKET EQEQ EOF DASH COMMA ]
## Transitions:
## Reductions:
-- On STAR SEMI RPAREN RBRACKET PLUS LPAREN LBRACKET EQEQ EOF DASH COMMA
--   reduce production exp -> exp LPAREN loption(separated_nonempty_list(COMMA,exp)) RPAREN

State 19:
## Known stack suffix:
## exp
## LR(1) items:
exp -> exp . PLUS exp [ STAR RPAREN PLUS LPAREN LBRACKET EQEQ DASH COMMA ]
exp -> exp . DASH exp [ STAR RPAREN PLUS LPAREN LBRACKET EQEQ DASH COMMA ]
exp -> exp . STAR exp [ STAR RPAREN PLUS LPAREN LBRACKET EQEQ DASH COMMA ]
exp -> exp . EQEQ exp [ STAR RPAREN PLUS LPAREN LBRACKET EQEQ DASH COMMA ]
exp -> exp . LBRACKET exp RBRACKET [ STAR RPAREN PLUS LPAREN LBRACKET EQEQ DASH COMMA ]
exp -> exp . LPAREN loption(separated_nonempty_list(COMMA,exp)) RPAREN [ STAR RPAREN PLUS LPAREN LBRACKET EQEQ DASH COMMA ]
separated_nonempty_list(COMMA,exp) -> exp . [ RPAREN ]
separated_nonempty_list(COMMA,exp) -> exp . COMMA separated_nonempty_list(COMMA,exp) [ RPAREN ]
## Transitions:
-- On STAR shift to state 20
-- On PLUS shift to state 25
-- On LPAREN shift to state 15
-- On LBRACKET shift to state 22
-- On EQEQ shift to state 27
-- On DASH shift to state 29
-- On COMMA shift to state 31
## Reductions:
-- On RPAREN
--   reduce production separated_nonempty_list(COMMA,exp) -> exp

State 20:
## Known stack suffix:
## exp STAR
## LR(1) items:
exp -> exp STAR . exp [ STAR SEMI RPAREN RBRACKET PLUS LPAREN LBRACKET EQEQ EOF DASH COMMA ]
## Transitions:
-- On TSTRING shift to state 1
-- On TINT shift to state 3
-- On TILDE shift to state 4
-- On LPAREN shift to state 5
-- On INT shift to state 6
-- On IDENT shift to state 7
-- On DASH shift to state 8
-- On BANG shift to state 9
-- On ty shift to state 10
-- On exp shift to state 21
## Reductions:

State 21:
## Known stack suffix:
## exp STAR exp
## LR(1) items:
exp -> exp . PLUS exp [ STAR SEMI RPAREN RBRACKET PLUS LPAREN LBRACKET EQEQ EOF DASH COMMA ]
exp -> exp . DASH exp [ STAR SEMI RPAREN RBRACKET PLUS LPAREN LBRACKET EQEQ EOF DASH COMMA ]
exp -> exp . STAR exp [ STAR SEMI RPAREN RBRACKET PLUS LPAREN LBRACKET EQEQ EOF DASH COMMA ]
exp -> exp STAR exp . [ STAR SEMI RPAREN RBRACKET PLUS LPAREN LBRACKET EQEQ EOF DASH COMMA ]
exp -> exp . EQEQ exp [ STAR SEMI RPAREN RBRACKET PLUS LPAREN LBRACKET EQEQ EOF DASH COMMA ]
exp -> exp . LBRACKET exp RBRACKET [ STAR SEMI RPAREN RBRACKET PLUS LPAREN LBRACKET EQEQ EOF DASH COMMA ]
exp -> exp . LPAREN loption(separated_nonempty_list(COMMA,exp)) RPAREN [ STAR SEMI RPAREN RBRACKET PLUS LPAREN LBRACKET EQEQ EOF DASH COMMA ]
## Transitions:
-- On LPAREN shift to state 15
-- On LBRACKET shift to state 22
-- On EQEQ shift to state 27
## Reductions:
-- On STAR SEMI RPAREN RBRACKET PLUS EQEQ EOF DASH COMMA
--   reduce production exp -> exp STAR exp
** Conflict on EQEQ

State 22:
## Known stack suffix:
## exp LBRACKET
## LR(1) items:
exp -> exp LBRACKET . exp RBRACKET [ STAR SEMI RPAREN RBRACKET PLUS LPAREN LBRACKET EQEQ EOF DASH COMMA ]
## Transitions:
-- On TSTRING shift to state 1
-- On TINT shift to state 3
-- On TILDE shift to state 4
-- On LPAREN shift to state 5
-- On INT shift to state 6
-- On IDENT shift to state 7
-- On DASH shift to state 8
-- On BANG shift to state 9
-- On ty shift to state 10
-- On exp shift to state 23
## Reductions:

State 23:
## Known stack suffix:
## exp LBRACKET exp
## LR(1) items:
exp -> exp . PLUS exp [ STAR RBRACKET PLUS LPAREN LBRACKET EQEQ DASH ]
exp -> exp . DASH exp [ STAR RBRACKET PLUS LPAREN LBRACKET EQEQ DASH ]
exp -> exp . STAR exp [ STAR RBRACKET PLUS LPAREN LBRACKET EQEQ DASH ]
exp -> exp . EQEQ exp [ STAR RBRACKET PLUS LPAREN LBRACKET EQEQ DASH ]
exp -> exp . LBRACKET exp RBRACKET [ STAR RBRACKET PLUS LPAREN LBRACKET EQEQ DASH ]
exp -> exp LBRACKET exp . RBRACKET [ STAR SEMI RPAREN RBRACKET PLUS LPAREN LBRACKET EQEQ EOF DASH COMMA ]
exp -> exp . LPAREN loption(separated_nonempty_list(COMMA,exp)) RPAREN [ STAR RBRACKET PLUS LPAREN LBRACKET EQEQ DASH ]
## Transitions:
-- On STAR shift to state 20
-- On RBRACKET shift to state 24
-- On PLUS shift to state 25
-- On LPAREN shift to state 15
-- On LBRACKET shift to state 22
-- On EQEQ shift to state 27
-- On DASH shift to state 29
## Reductions:

State 24:
## Known stack suffix:
## exp LBRACKET exp RBRACKET
## LR(1) items:
exp -> exp LBRACKET exp RBRACKET . [ STAR SEMI RPAREN RBRACKET PLUS LPAREN LBRACKET EQEQ EOF DASH COMMA ]
## Transitions:
## Reductions:
-- On STAR SEMI RPAREN RBRACKET PLUS LPAREN LBRACKET EQEQ EOF DASH COMMA
--   reduce production exp -> exp LBRACKET exp RBRACKET

State 25:
## Known stack suffix:
## exp PLUS
## LR(1) items:
exp -> exp PLUS . exp [ STAR SEMI RPAREN RBRACKET PLUS LPAREN LBRACKET EQEQ EOF DASH COMMA ]
## Transitions:
-- On TSTRING shift to state 1
-- On TINT shift to state 3
-- On TILDE shift to state 4
-- On LPAREN shift to state 5
-- On INT shift to state 6
-- On IDENT shift to state 7
-- On DASH shift to state 8
-- On BANG shift to state 9
-- On ty shift to state 10
-- On exp shift to state 26
## Reductions:

State 26:
## Known stack suffix:
## exp PLUS exp
## LR(1) items:
exp -> exp . PLUS exp [ STAR SEMI RPAREN RBRACKET PLUS LPAREN LBRACKET EQEQ EOF DASH COMMA ]
exp -> exp PLUS exp . [ STAR SEMI RPAREN RBRACKET PLUS LPAREN LBRACKET EQEQ EOF DASH COMMA ]
exp -> exp . DASH exp [ STAR SEMI RPAREN RBRACKET PLUS LPAREN LBRACKET EQEQ EOF DASH COMMA ]
exp -> exp . STAR exp [ STAR SEMI RPAREN RBRACKET PLUS LPAREN LBRACKET EQEQ EOF DASH COMMA ]
exp -> exp . EQEQ exp [ STAR SEMI RPAREN RBRACKET PLUS LPAREN LBRACKET EQEQ EOF DASH COMMA ]
exp -> exp . LBRACKET exp RBRACKET [ STAR SEMI RPAREN RBRACKET PLUS LPAREN LBRACKET EQEQ EOF DASH COMMA ]
exp -> exp . LPAREN loption(separated_nonempty_list(COMMA,exp)) RPAREN [ STAR SEMI RPAREN RBRACKET PLUS LPAREN LBRACKET EQEQ EOF DASH COMMA ]
## Transitions:
-- On STAR shift to state 20
-- On LPAREN shift to state 15
-- On LBRACKET shift to state 22
-- On EQEQ shift to state 27
## Reductions:
-- On SEMI RPAREN RBRACKET PLUS EQEQ EOF DASH COMMA
--   reduce production exp -> exp PLUS exp
** Conflict on EQEQ

State 27:
## Known stack suffix:
## exp EQEQ
## LR(1) items:
exp -> exp EQEQ . exp [ STAR SEMI RPAREN RBRACKET PLUS LPAREN LBRACKET EQEQ EOF DASH COMMA ]
## Transitions:
-- On TSTRING shift to state 1
-- On TINT shift to state 3
-- On TILDE shift to state 4
-- On LPAREN shift to state 5
-- On INT shift to state 6
-- On IDENT shift to state 7
-- On DASH shift to state 8
-- On BANG shift to state 9
-- On ty shift to state 10
-- On exp shift to state 28
## Reductions:

State 28:
## Known stack suffix:
## exp EQEQ exp
## LR(1) items:
exp -> exp . PLUS exp [ STAR SEMI RPAREN RBRACKET PLUS LPAREN LBRACKET EQEQ EOF DASH COMMA ]
exp -> exp . DASH exp [ STAR SEMI RPAREN RBRACKET PLUS LPAREN LBRACKET EQEQ EOF DASH COMMA ]
exp -> exp . STAR exp [ STAR SEMI RPAREN RBRACKET PLUS LPAREN LBRACKET EQEQ EOF DASH COMMA ]
exp -> exp . EQEQ exp [ STAR SEMI RPAREN RBRACKET PLUS LPAREN LBRACKET EQEQ EOF DASH COMMA ]
exp -> exp EQEQ exp . [ STAR SEMI RPAREN RBRACKET PLUS LPAREN LBRACKET EQEQ EOF DASH COMMA ]
exp -> exp . LBRACKET exp RBRACKET [ STAR SEMI RPAREN RBRACKET PLUS LPAREN LBRACKET EQEQ EOF DASH COMMA ]
exp -> exp . LPAREN loption(separated_nonempty_list(COMMA,exp)) RPAREN [ STAR SEMI RPAREN RBRACKET PLUS LPAREN LBRACKET EQEQ EOF DASH COMMA ]
## Transitions:
-- On STAR shift to state 20
-- On PLUS shift to state 25
-- On LPAREN shift to state 15
-- On LBRACKET shift to state 22
-- On EQEQ shift to state 27
-- On DASH shift to state 29
## Reductions:
-- On STAR SEMI RPAREN RBRACKET PLUS LPAREN LBRACKET EQEQ EOF DASH COMMA
--   reduce production exp -> exp EQEQ exp
** Conflict on STAR PLUS LPAREN LBRACKET EQEQ DASH

State 29:
## Known stack suffix:
## exp DASH
## LR(1) items:
exp -> exp DASH . exp [ STAR SEMI RPAREN RBRACKET PLUS LPAREN LBRACKET EQEQ EOF DASH COMMA ]
## Transitions:
-- On TSTRING shift to state 1
-- On TINT shift to state 3
-- On TILDE shift to state 4
-- On LPAREN shift to state 5
-- On INT shift to state 6
-- On IDENT shift to state 7
-- On DASH shift to state 8
-- On BANG shift to state 9
-- On ty shift to state 10
-- On exp shift to state 30
## Reductions:

State 30:
## Known stack suffix:
## exp DASH exp
## LR(1) items:
exp -> exp . PLUS exp [ STAR SEMI RPAREN RBRACKET PLUS LPAREN LBRACKET EQEQ EOF DASH COMMA ]
exp -> exp . DASH exp [ STAR SEMI RPAREN RBRACKET PLUS LPAREN LBRACKET EQEQ EOF DASH COMMA ]
exp -> exp DASH exp . [ STAR SEMI RPAREN RBRACKET PLUS LPAREN LBRACKET EQEQ EOF DASH COMMA ]
exp -> exp . STAR exp [ STAR SEMI RPAREN RBRACKET PLUS LPAREN LBRACKET EQEQ EOF DASH COMMA ]
exp -> exp . EQEQ exp [ STAR SEMI RPAREN RBRACKET PLUS LPAREN LBRACKET EQEQ EOF DASH COMMA ]
exp -> exp . LBRACKET exp RBRACKET [ STAR SEMI RPAREN RBRACKET PLUS LPAREN LBRACKET EQEQ EOF DASH COMMA ]
exp -> exp . LPAREN loption(separated_nonempty_list(COMMA,exp)) RPAREN [ STAR SEMI RPAREN RBRACKET PLUS LPAREN LBRACKET EQEQ EOF DASH COMMA ]
## Transitions:
-- On STAR shift to state 20
-- On LPAREN shift to state 15
-- On LBRACKET shift to state 22
-- On EQEQ shift to state 27
## Reductions:
-- On SEMI RPAREN RBRACKET PLUS EQEQ EOF DASH COMMA
--   reduce production exp -> exp DASH exp
** Conflict on EQEQ

State 31:
## Known stack suffix:
## exp COMMA
## LR(1) items:
separated_nonempty_list(COMMA,exp) -> exp COMMA . separated_nonempty_list(COMMA,exp) [ RPAREN ]
## Transitions:
-- On TSTRING shift to state 1
-- On TINT shift to state 3
-- On TILDE shift to state 4
-- On LPAREN shift to state 5
-- On INT shift to state 6
-- On IDENT shift to state 7
-- On DASH shift to state 8
-- On BANG shift to state 9
-- On ty shift to state 10
-- On separated_nonempty_list(COMMA,exp) shift to state 32
-- On exp shift to state 19
## Reductions:

State 32:
## Known stack suffix:
## exp COMMA separated_nonempty_list(COMMA,exp)
## LR(1) items:
separated_nonempty_list(COMMA,exp) -> exp COMMA separated_nonempty_list(COMMA,exp) . [ RPAREN ]
## Transitions:
## Reductions:
-- On RPAREN
--   reduce production separated_nonempty_list(COMMA,exp) -> exp COMMA separated_nonempty_list(COMMA,exp)

State 33:
## Known stack suffix:
## DASH exp
## LR(1) items:
exp -> exp . PLUS exp [ STAR SEMI RPAREN RBRACKET PLUS LPAREN LBRACKET EQEQ EOF DASH COMMA ]
exp -> exp . DASH exp [ STAR SEMI RPAREN RBRACKET PLUS LPAREN LBRACKET EQEQ EOF DASH COMMA ]
exp -> exp . STAR exp [ STAR SEMI RPAREN RBRACKET PLUS LPAREN LBRACKET EQEQ EOF DASH COMMA ]
exp -> exp . EQEQ exp [ STAR SEMI RPAREN RBRACKET PLUS LPAREN LBRACKET EQEQ EOF DASH COMMA ]
exp -> DASH exp . [ STAR SEMI RPAREN RBRACKET PLUS LPAREN LBRACKET EQEQ EOF DASH COMMA ]
exp -> exp . LBRACKET exp RBRACKET [ STAR SEMI RPAREN RBRACKET PLUS LPAREN LBRACKET EQEQ EOF DASH COMMA ]
exp -> exp . LPAREN loption(separated_nonempty_list(COMMA,exp)) RPAREN [ STAR SEMI RPAREN RBRACKET PLUS LPAREN LBRACKET EQEQ EOF DASH COMMA ]
## Transitions:
-- On STAR shift to state 20
-- On LPAREN shift to state 15
-- On LBRACKET shift to state 22
-- On EQEQ shift to state 27
## Reductions:
-- On SEMI RPAREN RBRACKET PLUS EQEQ EOF DASH COMMA
--   reduce production exp -> DASH exp
** Conflict on EQEQ

State 34:
## Known stack suffix:
## LPAREN exp
## LR(1) items:
exp -> exp . PLUS exp [ STAR RPAREN PLUS LPAREN LBRACKET EQEQ DASH ]
exp -> exp . DASH exp [ STAR RPAREN PLUS LPAREN LBRACKET EQEQ DASH ]
exp -> exp . STAR exp [ STAR RPAREN PLUS LPAREN LBRACKET EQEQ DASH ]
exp -> exp . EQEQ exp [ STAR RPAREN PLUS LPAREN LBRACKET EQEQ DASH ]
exp -> exp . LBRACKET exp RBRACKET [ STAR RPAREN PLUS LPAREN LBRACKET EQEQ DASH ]
exp -> exp . LPAREN loption(separated_nonempty_list(COMMA,exp)) RPAREN [ STAR RPAREN PLUS LPAREN LBRACKET EQEQ DASH ]
exp -> LPAREN exp . RPAREN [ STAR SEMI RPAREN RBRACKET PLUS LPAREN LBRACKET EQEQ EOF DASH COMMA ]
## Transitions:
-- On STAR shift to state 20
-- On RPAREN shift to state 35
-- On PLUS shift to state 25
-- On LPAREN shift to state 15
-- On LBRACKET shift to state 22
-- On EQEQ shift to state 27
-- On DASH shift to state 29
## Reductions:

State 35:
## Known stack suffix:
## LPAREN exp RPAREN
## LR(1) items:
exp -> LPAREN exp RPAREN . [ STAR SEMI RPAREN RBRACKET PLUS LPAREN LBRACKET EQEQ EOF DASH COMMA ]
## Transitions:
## Reductions:
-- On STAR SEMI RPAREN RBRACKET PLUS LPAREN LBRACKET EQEQ EOF DASH COMMA
--   reduce production exp -> LPAREN exp RPAREN
